# kua-loop-engine

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PROMPTS.md  README.md  conftest.py  pyproject.toml
agent/: README.md  __init__.py  agent.py  discord_bot.py  kua_ops_mcp.py  requirements.txt  runtime.py
deploy/: 10-kua-sysctl.sudoers  Caddyfile  README.md  cloudflare-checklist.md  docker-compose.yml  hermes-gateway.service  kua-discord.service  kua-gateway.service  kua-mcp-bridge.service  kua-runner.service  kua-worker.service
docs/: 01-VISION.md  02-ARCHITECTURE.md  03-DATA-MODEL.md  04-AGENT-READY-REPO.md  05-VPS-HERMES-SETUP.md  06-RUNNER.md  07-TRIGGER-GATEWAY.md  08-FACADE-A-BUGFIX.md  09-FACADE-C-DISCORD.md  10-FACADE-D-SEO.md  11-FACADE-B-DEMOS.md  12-FRONTEND-UI.md  13-SECURITY-BUDGETS.md  14-ROADMAP-MVP.md  15-FACADE-E-FINISH-SITE.md  16-FACADE-AGENT.md  17-discord.md  18-agent-tools.md  PHASE0-SPIKES-LOG.md  README.md  TODO-GITHUB-APP.md
gateway/: .env.example  README.md  conftest.py  requirements.txt
kua_core/: README.md  __init__.py  claude_cli.py  composition.py  config.py  connectors.py  db.py  github_api.py  loops_yaml.py  models.py  ops.py  provision.py  secrets.py
runner/: BUILD-NOTES.md  README.md  __init__.py  cli.py  context.py  deliver.py  env.py  executor.py  gitops.py  goal.py  requirements.txt  runner.py  scheduler.py  selftest.py  target.py  verify.py  worker.py
scripts/: verify-cloudflare.sh
ui/: .env.example  BUILD-NOTES.md  DESIGN-AUDIT.md  DESIGN-SYSTEM.md  README.md  UX-SPEC.md  middleware.ts  package-lock.json  package.json  (+2 more)
(+165 files in other folders)
